--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,3 +5,11 @@ body{
     
 }
 
+div {
+    color:rgb(17, 16, 2);
+    background-color: aqua;
+    font-size: 45px;
+    padding: 5px; 
+    border: 2px solid red;
+}
+
